--- a/src/1-line-plot.ipynb
+++ b/src/1-line-plot.ipynb
@@ -16,6 +16,44 @@
     "# TASK: Create a line plot with x values ranging from 0 to 10 and y values as the square of x.\n",
     "# Customize the plot by adding a title, labels for both axes, and a grid."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define x values from 0 to 10\n",
+    "x = range(0, 11)\n",
+    "\n",
+    "# Calculate y values as the square of x\n",
+    "y = [i**2 for i in x]\n",
+    "\n",
+    "# Create the line plot\n",
+    "plt.plot(x, y, marker='o', linestyle='-', color='b')\n",
+    "\n",
+    "# Add a title\n",
+    "plt.title('Line bar chat = x^2')\n",
+    "\n",
+    "# Add labels for the x and y axes\n",
+    "plt.xlabel('x values')\n",
+    "plt.ylabel('y = x^2')\n",
+    "\n",
+    "# Add a grid to the plot\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
