--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -16,6 +16,42 @@
     "# TASK: Create a scatter plot with x = [1, 2, 3, 4, 5] and y = [2, 4, 6, 8, 10].\n",
     "# Annotate each point with its (x, y) value, and set the title as 'Scatter Plot with Annotations'."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Data\n",
+    "categories = ['A', 'B', 'C', 'D']\n",
+    "values = [5, 7, 3, 9]\n",
+    "\n",
+    "# Define colors for each bar\n",
+    "colors = ['red', 'green', 'blue', 'orange']\n",
+    "\n",
+    "# Create the bar plot\n",
+    "plt.bar(categories, values, color=colors)\n",
+    "\n",
+    "# Add a title\n",
+    "plt.title('Bar Plot of Categories vs Values')\n",
+    "\n",
+    "# Add labels for the x and y axes\n",
+    "plt.xlabel('Categories')\n",
+    "plt.ylabel('Values')\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
