--- a/src/2-bar-plot.ipynb
+++ b/src/2-bar-plot.ipynb
@@ -16,6 +16,42 @@
     "# TASK: Create a bar plot with the following data: categories = ['A', 'B', 'C', 'D'] and values = [5, 7, 3, 9].\n",
     "# Use different colors for each bar and add a title to the plot."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Data\n",
+    "categories = ['A', 'B', 'C', 'D']\n",
+    "values = [5, 7, 3, 9]\n",
+    "\n",
+    "# Define colors for each bar\n",
+    "colors = ['red', 'green', 'blue', 'orange']\n",
+    "\n",
+    "# Create the bar plot\n",
+    "plt.bar(categories, values, color=colors)\n",
+    "\n",
+    "# Add a title\n",
+    "plt.title('Bar Plot of Categories vs Values')\n",
+    "\n",
+    "# Add labels for the x and y axes\n",
+    "plt.xlabel('Categories')\n",
+    "plt.ylabel('Values')\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
