--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -16,6 +16,36 @@
     "# TASK: Create a pie chart with the following data: labels = ['Python', 'Java', 'C++', 'JavaScript'] and sizes = [40, 25, 20, 15].\n",
     "# Display the percentages on the chart using autopct."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Data\n",
+    "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
+    "sizes = [40, 25, 20, 15]\n",
+    "\n",
+    "# Create pie chart\n",
+    "plt.figure(figsize=(6, 6))\n",
+    "plt.pie(sizes, labels=labels, autopct='%1.1f%%', startangle=140)\n",
+    "\n",
+    "# Title\n",
+    "plt.title(\"Programming Language Popularity\")\n",
+    "\n",
+    "# Display the chart\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
