--- a/src/4-pie-chart.ipynb
+++ b/src/4-pie-chart.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
-    "labels = ['Python', 'Java', 'C++', 'JavaScript']\n",
+    "labels = ['C', 'Java', 'C++', 'JavaScript']\n",
     "sizes = [40, 25, 20, 15]\n",
     "\n",
     "# Create pie chart\n",
