--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Data\n",
-    "categories = ['A', 'B', 'C', 'D']\n",
+    "categories = ['Z', 'B', 'C', 'D']\n",
     "values = [5, 7, 3, 9]\n",
     "\n",
     "# Define colors for each bar\n",
