--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -30,7 +30,7 @@
     "values = [5, 7, 3, 9]\n",
     "\n",
     "# Define colors for each bar\n",
-    "colors = ['Yellow', 'green', 'blue', 'orange']\n",
+    "colors = ['red', 'green', 'blue', 'orange']\n",
     "\n",
     "# Create the bar plot\n",
     "plt.bar(categories, values, color=colors)\n",
