--- a/src/3-scatter-plot.ipynb
+++ b/src/3-scatter-plot.ipynb
@@ -25,25 +25,26 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Data\n",
-    "categories = ['Z', 'B', 'C', 'D']\n",
-    "values = [5, 7, 3, 9]\n",
+    "# Data points\n",
+    "x = [1, 2, 3, 4, 5]\n",
+    "y = [2, 4, 6, 8, 10]\n",
     "\n",
-    "# Define colors for each bar\n",
-    "colors = ['red', 'green', 'blue', 'orange']\n",
+    "# Create scatter plot\n",
+    "plt.scatter(x, y, color='red', label='Data Points')\n",
     "\n",
-    "# Create the bar plot\n",
-    "plt.bar(categories, values, color=colors)\n",
+    "# Annotate each point\n",
+    "for i in range(len(x)):\n",
+    "    plt.annotate(f'({x[i]}, {y[i]})', (x[i], y[i]), textcoords=\"offset points\", xytext=(5,5), ha='center')\n",
     "\n",
-    "# Add a title\n",
-    "plt.title('Bar Plot of Categories vs Values')\n",
+    "# Set title and labels\n",
+    "plt.title('Scatter Plot with Annotations')\n",
+    "plt.xlabel('X-axis')\n",
+    "plt.ylabel('Y-axis')\n",
     "\n",
-    "# Add labels for the x and y axes\n",
-    "plt.xlabel('Categories')\n",
-    "plt.ylabel('Values')\n",
-    "\n",
-    "# Display the plot\n",
-    "plt.show()"
+    "# Show plot\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
    ]
   },
   {
